--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["github>shelfio/renovate-config-public"],
-  "labels": ["dependencies", "backend"],
+  "labels": ["dependencies", "frontend"],
   "ignoreDeps": [
     "cimg/node"
   ]
