--- a/package.json
+++ b/package.json
@@ -46,7 +46,16 @@
     "extends": "@shelf/babel-config/backend"
   },
   "prettier": "@shelf/prettier-config",
-  "dependencies": {},
+  "dependencies": {
+    "@stylelint/postcss-css-in-js": "0.38.0",
+    "postcss-html": "1.5.0",
+    "postcss-syntax": "0.36.2",
+    "stylelint-config-prettier": "9.0.5",
+    "stylelint-config-recommended": "10.0.1",
+    "stylelint-config-recommended-scss": "9.0.0",
+    "stylelint-config-styled-components": "0.1.1",
+    "stylelint-scss": "4.4.0"
+  },
   "devDependencies": {
     "@babel/cli": "7.20.7",
     "@babel/core": "7.20.12",
@@ -54,24 +63,16 @@
     "@shelf/eslint-config": "2.27.1",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.9",
-    "@stylelint/postcss-css-in-js": "0.38.0",
     "@types/jest": "29.4.0",
     "@types/node": "16",
     "eslint": "8.34.0",
     "husky": "8.0.3",
     "jest": "29.4.2",
     "lint-staged": "13.1.1",
-    "postcss-html": "1.5.0",
-    "postcss-syntax": "0.36.2",
     "prettier": "2.8.4",
     "react": "18.2.0",
     "styled-components": "5.3.6",
-    "stylelint": "15.1.0",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-recommended": "10.0.1",
-    "stylelint-config-recommended-scss": "9.0.0",
-    "stylelint-config-styled-components": "0.1.1",
-    "stylelint-scss": "4.4.0"
+    "stylelint": "15.1.0"
   },
   "peerDependencies": {
     "stylelint": "^15.0.0"
