--- a/package.json
+++ b/package.json
@@ -42,24 +42,20 @@
       "eslint --fix"
     ]
   },
-  "babel": {
-    "extends": "@shelf/babel-config/backend"
-  },
   "prettier": "@shelf/prettier-config",
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "7.20.7",
-    "@babel/core": "7.20.12",
-    "@shelf/babel-config": "1.2.0",
     "@shelf/eslint-config": "2.27.1",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.9",
     "@stylelint/postcss-css-in-js": "0.38.0",
+    "@swc/core": "1.3.37",
+    "@swc/jest": "0.2.24",
     "@types/jest": "29.4.0",
     "@types/node": "16",
     "eslint": "8.34.0",
     "husky": "8.0.3",
-    "jest": "29.4.2",
+    "jest": "29.4.3",
     "lint-staged": "13.1.1",
     "postcss-html": "1.5.0",
     "postcss-syntax": "0.36.2",
@@ -74,7 +70,7 @@
     "stylelint-scss": "4.4.0"
   },
   "peerDependencies": {
-    "stylelint": "^15.0.0"
+    "stylelint": "^15.2.0"
   },
   "engines": {
     "node": ">=16"
