--- a/package.json
+++ b/package.json
@@ -45,30 +45,31 @@
   "prettier": "@shelf/prettier-config",
   "dependencies": {
     "@stylelint/postcss-css-in-js": "0.38.0",
+    "postcss": "8.4.24",
     "postcss-html": "1.5.0",
     "postcss-syntax": "0.36.2",
     "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-recommended": "11.0.0",
-    "stylelint-config-recommended-scss": "9.0.1",
+    "stylelint-config-recommended": "12.0.0",
+    "stylelint-config-recommended-scss": "12.0.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-scss": "4.6.0"
+    "stylelint-scss": "5.0.0"
   },
   "devDependencies": {
     "@shelf/eslint-config": "2.29.1",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.11",
-    "@swc/core": "1.3.56",
+    "@swc/core": "1.3.61",
     "@swc/jest": "0.2.26",
-    "@types/jest": "29.5.0",
+    "@types/jest": "29.5.2",
     "@types/node": "16",
-    "eslint": "8.38.0",
+    "eslint": "8.41.0",
     "husky": "8.0.3",
     "jest": "29.5.0",
-    "lint-staged": "13.2.1",
-    "prettier": "2.8.7",
+    "lint-staged": "13.2.2",
+    "prettier": "2.8.8",
     "react": "18.2.0",
-    "styled-components": "5.3.10",
-    "stylelint": "15.6.0"
+    "styled-components": "5.3.11",
+    "stylelint": "15.6.2"
   },
   "peerDependencies": {
     "stylelint": "^15.2.0"
