--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2.1
 parameters:
   node_version:
     type: string
-    default: '16.15.1'
+    default: '20.11.1-browsers'
 
 commands:
   install_deps:
