--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "scripts": {
     "lint": "yarn lint:ci --fix",
-    "lint:ci": "eslint . --ext .js,.ts,.json",
+    "lint:ci": "eslint .",
     "test": "TZ=UTC yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "lint-staged": {
@@ -44,31 +44,30 @@
   },
   "prettier": "@shelf/prettier-config",
   "dependencies": {
-    "@stylelint/postcss-css-in-js": "0.38.0",
     "postcss-html": "1.7.0",
+    "postcss-styled-syntax": "0.6.4",
     "postcss-syntax": "0.36.2",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-recommended": "14.0.0",
-    "stylelint-config-recommended-scss": "14.0.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-scss": "6.3.1"
+    "stylelint-config-recommended": "14.0.1",
+    "stylelint-config-recommended-scss": "14.1.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-scss": "6.5.0"
   },
   "devDependencies": {
-    "@shelf/eslint-config": "3.15.1",
+    "@shelf/eslint-config": "4.2.1",
     "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.1.0",
-    "@swc/core": "1.5.29",
+    "@swc/core": "1.7.11",
     "@swc/jest": "0.2.36",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.2",
-    "eslint": "8.38.0",
-    "husky": "9.0.11",
+    "eslint": "9.9.0",
+    "husky": "9.1.4",
     "jest": "29.7.0",
-    "lint-staged": "15.2.7",
-    "prettier": "3.3.2",
+    "lint-staged": "15.2.9",
+    "prettier": "3.3.3",
     "react": "18.3.1",
-    "styled-components": "6.1.11",
-    "stylelint": "16.6.1"
+    "styled-components": "6.1.12",
+    "stylelint": "16.8.1"
   },
   "peerDependencies": {
     "stylelint": "^16"
