--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ commands:
     steps:
       - node/install-packages:
           pkg-manager: yarn
-          cache-version: v1-all
-          cache-only-lockfile: true
+          with-cache: false
           app-dir: ~/repo
           override-ci-command: yarn install --pure-lockfile --no-progress
 
